# oceanpad

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  pip_freeze.txt  prj.conf  west.yml  west_list.txt
boards/arm/oceanpad/: Kconfig  Kconfig.defconfig  board.cmake  oceanpad-pinctrl.dtsi  oceanpad.dts  oceanpad_defconfig
boards/oceanpad/: board.yml
doc/: BOM_OceanPad-NRF52-module_2026-02-21.csv  PCB_PCB_NRF_ECO_WAY_2026-02-21.json  PickAndPlace_PCB_NRF_ECO_WAY_2026-02-21.csv  SCH_OceanPad-NRF52-module_2026-02-21.json
include/: BleService.hpp  DeviceConfig.hpp  GamepadState.hpp  HardwareManager.hpp  LedFlasher.hpp  OceanPadApp.hpp  ReportCodec.hpp  ReportCodec8BitDo.hpp  ReportCodecXbox.hpp  SystemProcessor.hpp  hid_report_maps.hpp
include/HardwareManager/: BatteryGauge.hpp  HardwareManager.hpp  HardwareTypes.hpp  LedBlinker.hpp  MotorVibrator.hpp
include/ReportCodec/: ReportCodec.hpp  ReportCodec8BitDo.hpp  ReportCodecXbox.hpp
include/hardware/: ExpanderButtonsReader.hpp  HardwareManager.hpp  HardwareTypes.hpp  NativeButtonsReader.hpp  RawAxesReader.hpp  RawDataReader.hpp  RawImuReader.hpp
src/: BleService.cpp  HardwareManager.cpp  LedFlasher.cpp  OceanPadApp.cpp  ReportCodec8BitDo.cpp  ReportCodecXbox.cpp  SystemProcessor.cpp  main.cpp
src/HardwareManager/: BatteryGauge.cpp  HardwareManager.cpp  LedBlinker.cpp  MotorVibrator.cpp
src/ReportCodec/: ReportCodec8BitDo.cpp  ReportCodecXbox.cpp
src/hardware/: ExpanderButtonsReader.cpp  HardwareManager.cpp  NativeButtonsReader.cpp  RawAxesReader.cpp  RawDataReader.cpp  RawImuReader.cpp
(+19 files in other folders)
